--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,18 @@
 {
-    "name": "kaspar.suursalu/learnphp",
+    "name": "fredi.oskar.maala/learnphp",
+    "type": "project",
     "autoload": {
         "psr-4": {
             "App\\": "src/"
         }
     },
+    "authors": [
+        {
+            "name": "Fredi Oskar Maala",
+            "email": "fredioskar.maala@tptlive.ee"
+        }
+    ],
     "require": {
-        "symfony/var-dumper": "^6.2"
+        "symfony/var-dumper": "^6.3"
     }
 }
